unpackaged/main/default/objects/Intf_Kwote_Access_Mapping__mdt/Intf_Kwote_Access_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Intf Kwote Access Mapping</label>
    <pluralLabel>Intf Kwote Access Mappings</pluralLabel>
</CustomObject>