unpackaged/main/default/objects/Intf_Kwote_Access_Mapping__mdt/fields/api_access__c.field-meta.xml
<CustomField>
    <fullName>api_access__c</fullName>
    <label>api access</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>