unpackaged/main/default/objects/Intf_Kwote_Access_Mapping__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>api key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>