unpackaged/main/default/objects/Intf_Kwote_Access_Mapping__mdt/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>List des entités PF liées à cette clé Kwote</description>
    <label>Legal Entity List</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>